--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/mysql": "^2.15.19",
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.9",
     "bootstrap": "^5.1.1",
